--- a/FishShop/Base.lproj/LaunchScreen.storyboard
+++ b/FishShop/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,19 +30,21 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LSlogo" translatesAutoresizingMaskIntoConstraints="NO" id="v8O-19-c1d">
-                                <rect key="frame" x="76.666666666666686" y="362" width="240" height="128"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgScreen_2" translatesAutoresizingMaskIntoConstraints="NO" id="Jyw-hH-ErB">
+                                <rect key="frame" x="0.0" y="65" width="393" height="890"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="lxH-bO-N0w"/>
-                                    <constraint firstAttribute="height" constant="128" id="sSR-sV-DIf"/>
+                                    <constraint firstAttribute="width" constant="393" id="0Ol-q2-1LG"/>
+                                    <constraint firstAttribute="height" constant="890" id="sV7-J1-zVY"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.074509806930000005" green="0.082352943720000002" blue="0.086274504660000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.070588235294117646" green="0.082352941176470587" blue="0.086274509803921567" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="v8O-19-c1d" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="oor-HF-LnE"/>
-                            <constraint firstItem="v8O-19-c1d" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="pkg-jE-Zyi"/>
+                            <constraint firstAttribute="bottom" secondItem="Jyw-hH-ErB" secondAttribute="bottom" constant="-103" id="KsV-qm-6KI"/>
+                            <constraint firstItem="Jyw-hH-ErB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="6" id="Zmd-DR-DNa"/>
+                            <constraint firstItem="Jyw-hH-ErB" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="jch-JC-Kq0"/>
+                            <constraint firstItem="Jyw-hH-ErB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ubd-EZ-ZY6"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -52,6 +54,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LSlogo" width="1200" height="1200"/>
+        <image name="bgScreen_2" width="720" height="1280"/>
     </resources>
 </document>
